NMS-14767: rework javadoc config, generate jars on prod builds